--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "simple_note_app",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.js",
+	"main": "server.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"dev": "nodemon --exec babel-node server.js --watch",
@@ -25,6 +25,7 @@
 		"express-rate-limit": "^6.4.0",
 		"helmet": "^5.1.0",
 		"jsonwebtoken": "^8.5.1",
+		"moment": "^2.29.3",
 		"multer": "^1.4.4",
 		"mysql": "^2.18.1",
 		"prisma": "^3.14.0"
