--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
 	"name": "simple_note_app",
 	"version": "1.0.0",
-	"description": "",
-	"main": "server.js",
+	"description": "description",
+	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "nodemon --exec babel-node server.js --watch",
-		"start": "babel-node server.js"
+		"dev": "nodemon --exec babel-node src/index.js",
+		"clean": "rm -rf dist",
+		"build": "npm run clean && babel src -d dist --copy-files",
+		"start": "node dist/index.js"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@babel/cli": "^7.17.10",
 		"@babel/core": "^7.17.12",
 		"@babel/node": "^7.17.10",
 		"@babel/preset-env": "^7.17.12",
