--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"dev": "nodemon --exec babel-node src/index.js",
 		"clean": "rm -rf dist",
-		"build": "npm run clean && babel src -d dist --copy-files",
+		"build": "npm run clean && babel src -d dist",
 		"start": "node dist/index.js"
 	},
 	"keywords": [],
