--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
 		"multer": "^1.4.4",
 		"mysql": "^2.18.1",
 		"prisma": "^3.14.0"
+	},
+	"devDependencies": {
+		"@babel/plugin-transform-runtime": "^7.18.0"
 	}
 }
